2013-06-16  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>

	* shr.el (shr-dom-to-xml): Fixed function call.

	* eww.el (eww): New group.
	(eww-header-line-format): New custom variable.
	(eww-current-title): New variable.
	(eww-display-html): Update header and handle title tag.
	(eww-update-header-line-format): New function.
	(eww-tag-title): New function.

	* shr.el (shr-dom-to-xml): (shr-dom-to-xml): New function.
	(shr-tag-svg): Add support for the SVG tag.
	(shr-bullet): New custom variable.
	(shr-tag-li): Support custom bullet in unordered lists.

2013-06-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-expand-url): Respect // URLs.

	* eww.el (eww-tag-body): Override the shr body rendering so that we can
	put a background colour onto the entire buffer.
	(eww-render): When being redirected, use the redirect URL as the new
	base URL.

	* shr.el (shr-parse-base): Fix parsing error.

	* eww.el (eww-submit): Pass the base in to `shr-expand-url'.

	* shr.el (shr-parse-base): New function.
	(shr-expand-url): Use it to expand relative URLs reliably.

2013-06-15  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-search-collection): Fix docstring.
	(auth-source-netrc-parse): Refactor and improve netrc parser to support
	single-quoted strings and multiline entries.
	(auth-source-netrc-parse-next-interesting)
	(auth-source-netrc-parse-one, auth-source-netrc-parse-entries): New
	functions to support parser.

2013-06-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* eww.el (eww-submit): Get submit button logic right when hitting RET
	on non-submit buttons.

	* shr.el: Remove shr-preliminary-table-render, since that can't really
	be used for anything in practice.

2013-06-13  Albert Krewinkel  <tarleb@moltkeplatz.de>

	* sieve.el: Rebind q to (sieve-bury-buffer), bind Q to
	(sieve-manage-quit).

2013-06-14  Glenn Morris  <rgm@gnu.org>

	* mml2015.el (mml2015-maximum-key-image-dimension): Add :version.
