@@ -1,3 +1,7 @@
+2013-06-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>
+
+	* eww.el (eww-tag-textarea): Support <textarea>.
+
 2013-06-16  Rüdiger Sonderfeld  <ruediger@c-plusplus.de>
 
 	* shr.el (shr-dom-to-xml): Fixed function call.
